remove remove-status-column

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Sokunmaru | Desk</title>
+		<title>Sokunmaru's Desk | Kanban</title>
 
 		<link rel="stylesheet" href="./scss/dist/style.css" />
 		<link rel="shortcut icon" href="/favicon.png" />
@@ -138,10 +138,6 @@
 								ondragover="allowDrop(event)"
 								ondragenter="dragEnter(4)"
 							></div>
-						</div>
-						<div class="scrum-col even hide">
-							<h3>Remove</h3>
-							<div class="scrum-list" id="remove"></div>
 						</div>
 					</div>
 				</div>
